pridanie oddelenia k lozkam
